# Guardmarly

./: .dockerignore  .gitignore  .guardmarlyignore  .pre-commit-hooks.yaml  190526AS.md  AGENTS.md  AI_IMPLEMENTATION_GUIDE.md  ANSEDE_GROWTH_STRATEGY.md  AUDIT_FIXES_PLAN.md  BENCHMARKS.md  BENCHMARK_PLAN.md  BENCHMARK_SCORECARD.md  BLIND_SPOT_FIX_PLAN.md  CHANGELOG.md  CLAIMS_AND_EVIDENCE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  DEEPSEEK_V4_REMEDIATION_PLAYBOOK.md  DEFINITIVE_SCORECARD.md  DISCORD.md  Dockerfile  FINAL_BENCHMARK_REPORT.md  FINAL_COMPLIANCE_REPORT.md  FINAL_EVALUATION_REPORT.md  FORWARD_PLAN.md  GOOD_FIRST_ISSUES.md  HARSH_BENCHMARK_RESULTS.md  IFDS_IMPLEMENTATION_SUMMARY.md  LICENSE  MIGRATION_FROM_ANSEDE.md  NEXT_STEPS.md  PRODUCTION_ROADMAP.md  README.md  ROADMAP-TO-WORLD-BEST.md  ROADMAP.md  ROADMAP_TO_80.md  RULE_EXPANSION_PLAN.md  SECURITY.md  SESSION_SUMMARY.md  (+45 more)
.github/: CI.md  PULL_REQUEST_TEMPLATE.md  ROADMAP.md  SETUP.md  TROUBLESHOOTING.md  copilot-instructions.md
.github/DISCUSSION_TEMPLATE/: q-a.yml  show-and-tell.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml  precision_feedback.md  rule_request.yml
.github/agents/: 2026-world-class-sast-architect.agent.md
.github/scripts/: compare_engines.py  file_count.py  json_to_sarif.py  language_parity_check.py  validate_new_features.py  validate_sarif_trace_coverage.py
.github/workflows/: ansede-code-scanning.yml  build-release.yml  ci.yml  cve-regression.yml  deploy-docs.yml  noise-gate.yml  pages.yml  publish-extension.yml  publish.yml  release.yml  sbom.yml  sigstore-sign.yml  weekly-benchmark.yml
.session/july7-2026/: BLIND_AUDIT_IMPROVEMENT_PLAN.md  FINAL_EVALUATION_REPORT.md  WORLD_BEST_HANDOFF.md  WORLD_BEST_ROADMAP.md  analyze_fn_patterns.py  debug_hash.py  deep_fn_analysis.py  loop.md  ten_repo_scan.py
NodeGoat/: nodegoat-report.html
ansede_rust_core/src/: lib.rs
assets/: social-preview.html
benchmarks/: SURGICAL_PRECISION_RELEASE.md  analyze_30repo_audit.py  audit30.py  audit_accuracy.py  audit_results.json  audit_v3.py  auto_improve_loop.py  auto_validate_fixes.py  batch_100.py  benchmark_metrics.py  blind_audit_100.py  blind_audit_v3.py  blind_audit_v4.py  build_actionable_audit.py  bulletproof_campaign.py  campaign_100.py  campaign_results.json  campaign_scanner.py  campaign_targets_top100.json  campaign_worker.py  campaign_worker_v2.py  check_ci.py  check_growth.py  ci_detail.py  ci_full.py  classify_self_scan.py  close_pr.py  competitive_bench.py  cve_corpus.py  cve_recall_runner.py  debug_fp.py  debug_fp2.py  debug_method.py  deep_audit.py  deep_audit_final.py  deep_audit_java.py  deep_audit_result.json  deep_audit_v2.py  deep_audit_v2_100.py  definitive_audit.json  (+68 more)
benchmarks/audit_results/: ACTIONABLE_FIX_LIST.md  aggregate_before_fix.json  per_rule_precision.json  round1_java.json  round1_java_after_fix.json  round1_java_audited.json  round2_batch2_java.json  round2_batch3_java.json  round2_java_raw.json  round3_batch1_java.json  round3_batch2_java.json
benchmarks/report/: index.html  results.json
community_rules/: django-debug-enabled-CWE-489.yaml  express-missing-csp-CWE-693.yaml  express-missing-helmet-CWE-693.yaml  go-tls-insecure-skip-verify-CWE-295.yaml  index.json  java-spring-csrf-disabled-CWE-352.yaml  php-security-CWE.yaml  ruby-security-CWE.yaml
docker/: static-scanner.Dockerfile
docs/: AWESOME_LIST_PRS.md  BENCHMARKS.md  DEMO_PACKAGE.md  DETECTION_COVERAGE.md  ENTERPRISE_ADOPTION_PACKAGE.md  FULL_SCANNER_REPORT.md  GROWTH.md  LAUNCH_HN_POST.md  LAUNCH_REDDIT_POSTS.md  MARKETING_COPY_PACKAGE.md  NEWSLETTER_PITCHES.md  OUTREACH.md  PROMOTION.md  QUALITY.md  REPRODUCIBILITY.md  STATE_OF_SAST_2026_PAPER.md  WHITEPAPER.md  WORLD_BEST_ROADMAP.md  ci-integration.md  faq.md  getting-started.md  github-code-scanning-sarif-integration.md  index.md  interprocedural-taint-analysis.md  performance.md  precision.md  v1-to-v2-migration-guide.md  writing-rules.md
drafts/: EMAILS_TO_SEND.md
guardmarly_rust_core/: Cargo.toml  __init__.py  pyproject.toml  test_all_langs.py  test_native.py
guardmarly_rust_core/python/guardmarly_rust_core/: __init__.py
guardmarly_rust_core/src/: lib.rs
intellij-plugin/: build.gradle.kts
leaderboard/: index.html  results.json
rules/: custom_checks.yaml
scripts/: _verify_changes.py  audit_500_plus.py  benchmark.py  ci_golden_corpus.py  ci_improve.py  compile_repo_results.py  comprehensive_test.py  eval_100_repos.py  eval_500_snippets.py  fetch_corpora.py  fresh_scan.py  perf_check.py  post_blog.py  quick_bench.py  random_500_benchmark.py  validate_all.py  verify_zero_dep.py
site/: 404.html  index.html  sitemap.xml
tests/: conftest.py  helpers.py  test_analysis_compat.py  test_async_scanner.py  test_audit_engine.py  test_auto_rules.py  test_autofix.py  test_blueprint_modules.py  test_cache.py  test_classifier.py  test_cli.py  test_clustering.py  test_community_rules.py  test_confidence.py  test_config.py  test_cpg.py  test_cross_file.py  test_cvss.py  test_datascience.py  test_dsl_engine.py  test_entropy.py  test_explain.py  test_external_corpus.py  test_ifds.py  test_ifds_e2e_integration.py  test_ifds_ide_lattice.py  test_ifds_realistic_scenarios.py  test_incremental.py  test_interprocedural_taint.py  test_java_csharp_analyzers.py  test_js.py  test_js_ast.py  test_js_minified_project_index.py  test_js_pratt_parser.py  test_js_structure_cache.py  test_licensing.py  test_lsp_server.py  test_noise_policies.py  test_openapi_bridge.py  test_phase2_registry_expansion.py  (+18 more)
tools/: check_binary_guardrails.py  compare_web_wild_seeds.py  cve_watcher.py  day_zero_scanner.py  demo_scan.py  live_web_wild_benchmark.py  pr_bot.py  targets_top_pypi.json
visualstudio-extension/: AnsedePackage.cs  AnsedeScannerService.cs  IsExternalInit.cs
vscode-extension/: .vscodeignore  LICENSE  README.md  guardmarly-1.0.0.vsix  package-lock.json  package.json  tsconfig.json
webapp/: DEPLOY.md  __init__.py  app.py  requirements.txt  scan_counter.json
(+19335 files in other folders)
