[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ansede-static"
version = "5.3.0"
description = "AST-based SAST for Python and JavaScript — detects IDOR, auth bypass, and ownership flaws that Bandit misses."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Matty Bell" }
]
maintainers = [
    { name = "Matty Bell" }
]
keywords = [
    "security", "sast", "static-analysis", "vulnerability", "linter",
    "code-review", "cwe", "owasp", "injection", "python", "javascript",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
    "Environment :: Console",
    "Operating System :: OS Independent",
]
dependencies = []

[project.optional-dependencies]
dev        = ["pytest>=8", "pytest-cov>=5", "mypy>=1.10", "ruff>=0.5", "rich>=13.0.0"]
test       = ["pytest>=8", "pytest-cov>=5"]
rich       = ["rich>=13.0.0"]
treesitter = ["tree-sitter>=0.20", "tree-sitter-languages>=1.8", "tree-sitter-java>=0.21"]
graph      = ["networkx>=3.0"]
schema     = ["jsonschema>=4.0"]
v2         = ["ansede-static[treesitter,graph,schema]"]

[project.scripts]
ansede-static     = "ansede_static.cli:main"
ansede            = "ansede_static.cli:main"
ansede-static-lsp = "ansede_static.lsp_server:run_lsp_server"

[project.urls]
Homepage   = "https://github.com/mattybellx/Ansede"
Repository = "https://github.com/mattybellx/Ansede"
Issues     = "https://github.com/mattybellx/Ansede/issues"
Documentation = "https://github.com/mattybellx/Ansede#readme"
Changelog = "https://github.com/mattybellx/Ansede/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/ansede_static"]
artifacts = [
    "src/ansede_static/schemas/ansede.schema.json",
    "src/ansede_static/schemas/rule_schema.json",
]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/CHANGELOG.md",
    "/LICENSE",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    # Suppress SyntaxWarnings from dynamically compiled rule pattern code
    # (Python 3.13+ warns about invalid escape sequences in test fixture
    #  code strings compiled by the scanner's ast.parse() calls)
    "ignore::SyntaxWarning",
]

[tool.mypy]
ignore_missing_imports = true
disable_error_code = [
    "call-arg",
    "name-defined",
    "no-redef",
    "union-attr",
    "misc",
    "operator",
    "assignment",
    "attr-defined",
    "arg-type",
    "return-value",
    "call-overload",
    "truthy-function",
    "var-annotated",
    "dict-item",
]
warn_unused_ignores = false

