[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "guardmarly"
version = "6.4.0"
description = "Find IDOR, missing authorization, SQL injection, and 30+ vulnerability types in Python, JavaScript, Go, Java, and C#. 100% CVE recall. Zero false positives on clean code. Fully offline. No API keys needed."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Matty Bell" }
]
maintainers = [
    { name = "Matty Bell" }
]
keywords = [
    "security", "sast", "static-analysis", "vulnerability", "linter",
    "code-review", "cwe", "owasp", "injection", "python", "javascript",
    "idor", "authentication", "authorization", "access-control",
    "offline", "air-gapped", "cli", "devsecops", "sarif",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
    "Environment :: Console",
    "Operating System :: OS Independent",
]
dependencies = ["rich>=13.0.0"]

[project.optional-dependencies]
dev        = ["pytest>=8", "pytest-cov>=5", "mypy>=1.10", "ruff>=0.5", "tree-sitter>=0.20; python_version>='3.9'", "tree-sitter-java>=0.21; python_version>='3.9'"]
test       = ["pytest>=8", "pytest-cov>=5"]

treesitter = ["tree-sitter>=0.20", "tree-sitter-java>=0.21"]
graph      = ["networkx>=3.0"]
schema     = ["jsonschema>=4.0"]
v2         = ["guardmarly[treesitter,graph,schema]"]

# User-friendly aliases (prefer these over the internal names above)
fast       = ["guardmarly[treesitter]"]             # tree-sitter for better Java/JS analysis
full       = ["guardmarly[treesitter,graph,schema]"] # everything
enterprise = ["guardmarly[treesitter,graph,schema]"] # enterprise alias for full

[project.scripts]
guardmarly     = "guardmarly.cli:main"
guardmarly-lsp = "guardmarly.lsp_server:run_lsp_server"

[project.urls]
Homepage   = "https://github.com/mattybellx/Guardmarly"
Repository = "https://github.com/mattybellx/Guardmarly"
Issues     = "https://github.com/mattybellx/Guardmarly/issues"
Documentation = "https://github.com/mattybellx/Guardmarly#readme"
Changelog = "https://github.com/mattybellx/Guardmarly/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/guardmarly"]
artifacts = [
    "src/guardmarly/schemas/guardmarly.schema.json",
    "src/guardmarly/schemas/rule_schema.json",
]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/CHANGELOG.md",
    "/LICENSE",
    "/showcase.png",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    # Suppress SyntaxWarnings from dynamically compiled rule pattern code
    # (Python 3.13+ warns about invalid escape sequences in test fixture
    #  code strings compiled by the scanner's ast.parse() calls)
    "ignore::SyntaxWarning",
]

[tool.mypy]
ignore_missing_imports = true
disable_error_code = [
    "call-arg",
    "name-defined",
    "no-redef",
    "union-attr",
    "misc",
    "operator",
    "assignment",
    "attr-defined",
    "arg-type",
    "return-value",
    "call-overload",
    "truthy-function",
    "var-annotated",
    "dict-item",
]
warn_unused_ignores = false

