[package]
name = "guardmarly_rust_core"
version = "0.1.0"
edition = "2021"
description = "Native Rust extraction core for guardmarly SAST engine - PyO3 bindings with Tree-sitter parsing"

[lib]
name = "guardmarly_rust_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module", "abi3", "abi3-py311"] }
tree-sitter = "0.25"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-java = "0.23"
tree-sitter-go = "0.23"
tree-sitter-c-sharp = "0.23"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
once_cell = "1"

[profile.release]
lto = true
opt-level = 3
