[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "guardmarly_rust_core"
version = "0.1.0"
description = "Native Rust extraction core for guardmarly SAST engine"
requires-python = ">=3.11"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "guardmarly_rust_core._core"
